# pdfresearchassistant

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2795e2b537ec_inital_migration.py
chroma/: chroma.sqlite3
chroma_db/: chroma.sqlite3
src/database/: database.py
src/models/: chunkpdf.py  conversation.py  message.py  pdf.py
src/routers/: pdf_router.py  ui_router.py
src/schemas/: chunkpdf_schema.py  conversation_schema.py  message_schema.py  pdf_schema.py
