[project]
name = "pdfresearchassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.137.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
